# sayhi

./: LICENSE  README.md  pyproject.toml
sayhi/: cli.py
