[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sayhi"
version = "1.2.0"
description = "A simple CLI to greet someone"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = []
requires-python = ">=3.7"

[project.scripts]
sayhi = "sayhi.cli:main"

